Added push in the description

--- a/github.ipynb
+++ b/github.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "Kommando:\n",
     "- git add . - Lägger toö alla filer för att sparas\n",
-    "- git commit -samma som under changes stage all changes\n"
+    "- git commit -m \"kommentar sparar projektet i en snapshot samma som under changes stage all changes\n",
+    "- git push - lägger till våran snapshot på github\n"
    ]
   }
  ],
